--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tsc": "tsc",
-    "start": "node build/app.js"
+    "start": "nodemon --exec ts-node src/app.ts"
   },
   "repository": {
     "type": "git",
@@ -19,10 +18,17 @@
   },
   "homepage": "https://github.com/cyclic-software/starter-express-api#readme",
   "dependencies": {
+    "chatgpt": "^3.3.9",
     "express": "^4.17.1",
+    "nodemailer": "^6.8.0",
+    "nodemon": "^2.0.20",
+    "puppeteer": "^19.4.1",
+    "sendmail": "^1.6.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.15"
+    "@types/express": "^4.17.15",
+    "@types/nodemailer": "^6.4.7"
   }
 }
