--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec ts-node src/app.ts"
+    "start2": "nodemon --exec ts-node app/app.ts",
+    "start": "node build/app.js"
   },
   "repository": {
     "type": "git",
@@ -19,9 +21,11 @@
   "homepage": "https://github.com/cyclic-software/starter-express-api#readme",
   "dependencies": {
     "chatgpt": "^3.3.9",
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
+    "openai": "^3.1.0",
     "puppeteer": "^19.4.1",
     "sendmail": "^1.6.1",
     "ts-node": "^10.9.1",
